--- a/src/pages/misc/index.astro
+++ b/src/pages/misc/index.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from "@layouts/layout.astro";
+import Layout from "@/layouts/layout.astro";
 import { buttonVariants } from "@/components/ui/button";
 
 const baseUrl = import.meta.env.BASE_URL;
