--- a/src/pages/sequence/racaman/index.astro
+++ b/src/pages/sequence/racaman/index.astro
@@ -1,6 +1,6 @@
 ---
-import Layout from "@/layouts/layout.astro";
-import { Racaman } from "@/components/sequence/racaman/racaman";
+import Layout from "@layouts/layout.astro";
+import { Racaman } from "@components/sequence/racaman/racaman";
 ---
 
 <Layout title="Racaman">
