clean racaman code breaking in smaller func

--- a/src/pages/sequence/index.astro
+++ b/src/pages/sequence/index.astro
@@ -6,7 +6,7 @@ const baseUrl = import.meta.env.BASE_URL;
 ---
 
 <Layout title="Sequence">
-  <article class="mx-auto flex max-w-screen-xl gap-8">
+  <article>
     <a href={`${baseUrl}sequence/racaman/`} class={buttonVariants()}>--&gt; Racaman sequence</a>
   </article>
 </Layout>
