--- a/src/pages/sequence/index.astro
+++ b/src/pages/sequence/index.astro
@@ -1,6 +1,6 @@
 ---
-import Layout from "@layouts/layout.astro";
-import { buttonVariants } from "@components/ui/button";
+import { buttonVariants } from "@/components/ui/button";
+import Layout from "@/layouts/layout.astro";
 
 const baseUrl = import.meta.env.BASE_URL;
 ---
