--- a/src/pages/sequences/index.astro
+++ b/src/pages/sequences/index.astro
@@ -5,7 +5,7 @@ import Layout from "@/layouts/layout.astro";
 const baseUrl = import.meta.env.BASE_URL;
 ---
 
-<Layout title="Sequence">
+<Layout title="Sequences">
   <article>
     <a href={`${baseUrl}sequence/racaman/`} class={buttonVariants()}>--&gt; Racaman sequence</a>
   </article>
