--- a/src/pages/sequences/index.astro
+++ b/src/pages/sequences/index.astro
@@ -7,6 +7,6 @@ const baseUrl = import.meta.env.BASE_URL;
 
 <Layout title="Sequences">
   <article>
-    <a href={`${baseUrl}sequence/racaman/`} class={buttonVariants()}>--&gt; Racaman sequence</a>
+    <a href={`${baseUrl}sequences/racaman/`} class={buttonVariants()}>--&gt; Racaman sequence</a>
   </article>
 </Layout>
