--- a/src/pages/mosaic/index.astro
+++ b/src/pages/mosaic/index.astro
@@ -1,5 +1,5 @@
 ---
-import { buttonVariants } from "@/components/ui/button";
+import { buttonVariants } from "@/components/ui/button/button";
 import Layout from "@/layouts/layout.astro";
 
 const baseUrl = import.meta.env.BASE_URL;
