--- a/src/pages/sequences/index.astro
+++ b/src/pages/sequences/index.astro
@@ -1,5 +1,4 @@
 ---
-import { buttonVariants } from "@/components/ui/button/button";
 import Layout from "@/layouts/layout.astro";
 
 const baseUrl = import.meta.env.BASE_URL;
@@ -7,6 +6,6 @@ const baseUrl = import.meta.env.BASE_URL;
 
 <Layout title="Sequences">
   <article>
-    <a href={`${baseUrl}sequences/racaman/`} class={buttonVariants()}>--&gt; Racaman sequence</a>
+    <a href={`${baseUrl}sequences/racaman/`}>--&gt; Racaman sequence</a>
   </article>
 </Layout>
